fixed btn container spacing

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 38rem;
+  top: 33rem;
   /* margin-top: 125px; */
 }
 
